--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "@types/showdown": "^2.0.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "sass": "^1.52.1",
