--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/showdown": "^2.0.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "prettier": "2.6.2",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
