--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "build.watch": "webpack --watch"
+    "serve": "python -m http.server --directory=public",
+    "build.p": "webpack --mode=production",
+    "build.d": "webpack --mode=development",
+    "build-watch.d": "webpack --mode=development --watch"
   },
   "author": "",
   "license": "UNLICENSED",
